...
  const dispatch = useDispatch();
  const [isConfirmModalOpen, setIsConfirmModalOpen] = useState<boolean>(false);

  const handleOnPressLogout = () => {
    if (Platform.OS === "ios") {
      showConfirmAlert({
        title: "Logout",
        tagLine: "Are you sure you want to logout?",
        handleOnDone: handleOnDone,
      });
    } else {
      setIsConfirmModalOpen(true);
    }
...
        hasBorder={false}
      />
      <ConfirmationAlert
        isModalOpen={isConfirmModalOpen}
        title="Logout"
        tagLine="Are you sure you want to logout?"
        buttonTitle="Yes"
        handleOnClose={handleOnCloseInfoModal}
        handleOnDone={handleOnDone}
      />
    </>
  );
};
...
