...
      dispatch(setCanUseAI(data?.can_use_ai));
    }
  }, [data?.can_use_ai]);

  return (
    <ScreenWrapper paddingTop={0}>
      <View style={styles.container} testID="chat_screen">
        <KeyboardAvoidingView
          style={styles.container}
          // behavior={Platform.OS === "ios" ? "padding" : undefined}  // Android handled by adjustResize
          behavior="padding"
          keyboardVerticalOffset={
            Platform.OS === "ios"
...
                ? 30
                : 60
              : 30
          }
        >
          <Header
            testID="menu_button_id"
            canUseAI={canUseAI}
            isStarred={isStarred}
            conversationId={conversationId}
          />
          <NoInternetBanner />
          {canUseAI != undefined && <NoSubscription canUseAI={canUseAI} />}
...
